[package]
name = "taiga"
version = "0.0.1"
authors = ["Jesús Espino <jespinog@gmail.com>"]
description = "TaigaIO client library"
license = "BSD-3-Clause"
homepage = "http://github.com/jespino/rs-taiga"
repository = "http://github.com/jespino/rs-taiga"
documentation = "http://github.com/jespino/rs-taiga"
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "*"

[dependencies]
hyper = "0.6.14"
time = "0.1"
serde = "*"
serde_json = "*"
serde_macros = { version = "*", optional = true }
