[package]
name = "taiga"
version = "0.0.2"
authors = ["Jesús Espino <jespinog@gmail.com>"]
description = "TaigaIO client library"
license = "BSD-3-Clause"
homepage = "http://github.com/jespino/rs-taiga"
repository = "http://github.com/jespino/rs-taiga"
documentation = "http://github.com/jespino/rs-taiga"

[dependencies]
hyper = "0.6.14"
time = "0.1"
serde = "*"
serde_json = "*"
serde_macros = "*"
